--- a/use-aws.yml
+++ b/use-aws.yml
@@ -71,8 +71,8 @@
   value: &aws
     access_key_id: ((access_key_id))
     secret_access_key: ((secret_access_key))
-    default_key_name: bosh
-    default_security_groups: [bosh]
+    default_key_name: ((default_key_name))
+    default_security_groups: ((default_security_groups))
     region: ((region))
 
 - type: replace
