dont recommend external ip ops

--- a/external-ip-not-recommended.yml
+++ b/external-ip-not-recommended.yml
@@ -1,3 +1,5 @@
+# WARNING: We do not recommend to expose Director and any other services over public addresses.
+
 - type: replace
   path: /networks/-
   value:
