--- a/aws/cpi.yml
+++ b/aws/cpi.yml
@@ -3,6 +3,7 @@
   path: /releases/-
   value:
     name: bosh-aws-cpi
+    version: 60
     url: https://bosh.io/d/github.com/cloudfoundry-incubator/bosh-aws-cpi-release?v=60
     sha1: 8e40a9ff892204007889037f094a1b0d23777058
 
@@ -25,7 +26,7 @@
   value: {type: gp2}
 
 - type: replace
-  path: /networks/name=private/subnets/0/cloud_properties?
+  path: /networks/name=default/subnets/0/cloud_properties?
   value: {subnet: ((subnet_id))}
 
 # Enable registry job
