--- a/azure/cpi.yml
+++ b/azure/cpi.yml
@@ -3,6 +3,7 @@
   path: /releases/-
   value:
     name: bosh-azure-cpi
+    version: 20
     url: https://bosh.io/d/github.com/cloudfoundry-incubator/bosh-azure-cpi-release?v=20
     sha1: fb0180c685714d064b5a467eb6f2b34388fadf0a
 
@@ -19,7 +20,7 @@
     instance_type: Standard_D1
 
 - type: replace
-  path: /networks/name=private/subnets/0/cloud_properties?
+  path: /networks/name=default/subnets/0/cloud_properties?
   value:
     virtual_network_name: ((vnet_name))
     subnet_name: ((subnet_name))
