--- a/virtualbox/cpi.yml
+++ b/virtualbox/cpi.yml
@@ -3,6 +3,7 @@
   path: /releases/-
   value:
     name: bosh-virtualbox-cpi
+    version: 0.0.2
     url: https://bosh.io/d/github.com/cppforlife/bosh-virtualbox-cpi-release?v=0.0.2
     sha1: 807fba203ca71bea7b686ce1301d98ee29885fcc
 
@@ -21,7 +22,7 @@
     ephemeral_disk: 16_384
 
 - type: replace
-  path: /networks/name=private/subnets/0/cloud_properties?
+  path: /networks/name=default/subnets/0/cloud_properties?
   value:
     name: ((network_name))
 
