--- a/vsphere/cpi.yml
+++ b/vsphere/cpi.yml
@@ -3,6 +3,7 @@
   path: /releases/-
   value:
     name: bosh-vsphere-cpi
+    version: 34
     url: https://bosh.io/d/github.com/cloudfoundry-incubator/bosh-vsphere-cpi-release?v=34
     sha1: 6a4e6d05a4b50c3d4fa53bda1d5d552f5899f1a6
 
@@ -21,7 +22,7 @@
     disk: 20_000
 
 - type: replace
-  path: /networks/name=private/subnets/0/cloud_properties?
+  path: /networks/name=default/subnets/0/cloud_properties?
   value: {name: ((network_name))}
 
 # Add CPI job
