--- a/openstack/trusted-certs.yml
+++ b/openstack/trusted-certs.yml
@@ -1,5 +1,4 @@
 ---
 - type: replace
   path: /instance_groups/name=bosh/properties/director/trusted_certs?
-  value:
-    ca_cert: ((openstack_ca_cert))
+  value: ((openstack_ca_cert))
