customize director vm tags on gcp

--- a/gcp/cpi.yml
+++ b/gcp/cpi.yml
@@ -32,7 +32,7 @@
     network_name: ((network))
     subnetwork_name: ((subnetwork))
     ephemeral_external_ip: false
-    tags: [internal, no-ip]
+    tags: ((tags))
 
 # Add CPI job
 - type: replace
