add disable_agent job to bosh-lite
useful for quick forceful upgrades so that deployments dont have to be stopped to unmount bosh-lite disks

--- a/bosh-lite.yml
+++ b/bosh-lite.yml
@@ -15,6 +15,14 @@
     sha1: dbfd8e7e3560286b6d8c02ba9065a50289e8e0f3
 
 - type: replace
+  path: /releases/name=os-conf?
+  value:
+    name: os-conf
+    version: 10
+    url: https://bosh.io/d/github.com/cloudfoundry/os-conf-release?v=10
+    sha1: 29e30fe7941dafc682c8eb250b78f235a552ddfe
+
+- type: replace
   path: /instance_groups/name=bosh/jobs/-
   value:
     name: warden_cpi
@@ -25,6 +33,12 @@
   value:
     name: garden
     release: garden-linux
+
+- type: replace
+  path: /instance_groups/name=bosh/jobs/-
+  value:
+    name: disable_agent
+    release: os-conf
 
 - type: replace
   path: /instance_groups/name=bosh/properties/director/cpi_job?
