Match previous BOSH-Lite settings
- [CF manifest-generation script](https://github.com/cloudfoundry/cf-release/blob/v250/scripts/generate-bosh-lite-dev-manifest#L27) expects director name of "Bosh Lite Director".
- [Networks in legacy CF BOSH-Lite manifest template](https://github.com/cloudfoundry/cf-release/blob/v250/templates/cf-infrastructure-bosh-lite.yml#L1442-L3114) do not have gateways.

These settings correspond to the current [director name](https://github.com/cloudfoundry/bosh-lite/blob/9000.137.0/packer/templates/bosh_lite_manifest_template.yml#L69) and [gateway compatibility setting](https://github.com/cloudfoundry/bosh-lite/blob/9000.137.0/packer/templates/bosh_lite_manifest_template.yml#L82) in the manifest template in the bosh-lite repo.

--- a/bosh-lite.yml
+++ b/bosh-lite.yml
@@ -45,6 +45,10 @@
   value: warden_cpi
 
 - type: replace
+  path: /instance_groups/name=bosh/properties/director/ignore_missing_gateway?
+  value: true
+
+- type: replace
   path: /instance_groups/name=bosh/properties/compiled_package_cache?
   value:
     provider: local
