--- a/bosh-lite.yml
+++ b/bosh-lite.yml
@@ -80,3 +80,11 @@
     allow_host_access: true
     destroy_containers_on_start: true # avoids snapshots
     default_container_grace_time: 0
+
+- type: replace
+  path: /disk_pools/name=disks/disk_size
+  value: 65_536
+
+- type: replace
+  path: /instance_groups/name=bosh/properties/garden/graph_cleanup_threshold_in_mb?
+  value: 0
