--- a/gcp/bosh-lite-vm-type.yml
+++ b/gcp/bosh-lite-vm-type.yml
@@ -1,17 +1,5 @@
 ---
 # Configure sizes for bosh-lite on gcp
 - type: replace
-  path: /resource_pools/name=vms/cloud_properties?
-  value:
-    zone: ((zone))
-    machine_type: n1-standard-8
-    root_disk_size_gb: 40
-    root_disk_type: pd-standard
-
-- type: replace
-  path: /disk_pools/name=disks/disk_size
-  value: 65_536
-
-- type: replace
-  path: /instance_groups/name=bosh/properties/garden/graph_cleanup_threshold_in_mb?
-  value: 0
+  path: /resource_pools/name=vms/cloud_properties/machine_type
+  value: n1-standard-8
