--- a/bosh-lite-runc.yml
+++ b/bosh-lite-runc.yml
@@ -22,3 +22,4 @@
     allow_host_access: true
     destroy_containers_on_start: true # avoids snapshots
     default_container_grace_time: 0
+    graph_cleanup_threshold_in_mb: 0
