--- a/bosh-lite-runc.yml
+++ b/bosh-lite-runc.yml
@@ -10,8 +10,8 @@
   value:
     name: garden-runc
     version: 1.1.1
-    url: https://bosh.io/d/github.com/cloudfoundry/garden-runc-release?v=1.1.1
-    sha1: 6e50e37efbfbfcfa803d5d87a7a85a3073f69243
+    url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/garden-runc-1.1.1-ubuntu-trusty-3312.15-20170120-025258-725649478-20170120025303.tgz?versionId=LM5X6WRr_SSQkCpTDg197bRwr8YQxWqP
+    sha1: 72748d8ddad788f2092fe121e6944c90cfd3b5d2
 
 - type: replace
   path: /instance_groups/name=bosh/properties/garden
