--- a/bosh-lite.yml
+++ b/bosh-lite.yml
@@ -3,16 +3,16 @@
   value:
     name: bosh-warden-cpi
     version: 30
-    url: https://bosh.io/d/github.com/cppforlife/bosh-warden-cpi-release?v=30
-    sha1: 0e89163cf4c0b46da61a0413e8a317c6a24f14c2
+    url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/bosh-warden-cpi-30-ubuntu-trusty-3312.15-20170120-022946-24441193-20170120022949.tgz?versionId=ayT6Bm0VLtWso8yg.tVeKQciAZQpp1za
+    sha1: 18844836f0b59e0955178bce51e15fbb39b4db7f
 
 - type: replace
   path: /releases/-
   value:
     name: garden-linux
     version: 0.342.0
-    url: https://bosh.io/d/github.com/cloudfoundry-incubator/garden-linux-release?v=0.342.0
-    sha1: dbfd8e7e3560286b6d8c02ba9065a50289e8e0f3
+    url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/garden-linux-0.342.0-ubuntu-trusty-3312.15-20170120-022913-647174408-20170120022918.tgz?versionId=bd83ztk3ZQw8Dtyhhs9diN8X35XSc0ef
+    sha1: 607116c880cec8bfb22ed816ee1cb8dae42089d7
 
 - type: replace
   path: /releases/name=os-conf?
