--- a/uaa.yml
+++ b/uaa.yml
@@ -3,8 +3,8 @@
   value:
     name: uaa
     version: 24
-    url: https://bosh.io/d/github.com/cloudfoundry/uaa-release?v=24
-    sha1: d0feb5494153217f3d62b346f426ad2b2f43511a
+    url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/uaa-24-ubuntu-trusty-3312.15-20170120-023622-425305721-20170120023628.tgz?versionId=YLs5vQ9b71TS3Qj7fvOv0Ak.g_H9ZsDd
+    sha1: 7586b83aef6b099cb94458fef8200c70cd868184
 
 # Switch Director to use UAA
 - type: replace
