--- a/bosh.yml
+++ b/bosh.yml
@@ -3,9 +3,9 @@ name: bosh
 
 releases:
 - name: bosh
-  version: 260.3
-  url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/release-bosh-260.3-on-ubuntu-trusty-stemcell-3312.15-20170114005140.tgz?versionId=zrr5mZQsATLLdTsgmeh3hHjUeorL7vgC
-  sha1: 3f2f94127ba4ebbb7c1d1c259b24e3cc8c38e2ee
+  version: 260.4
+  url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/bosh-260.4-ubuntu-trusty-3312.15-20170121-032739-394697513-20170121032746.tgz?versionId=V7JWrTBNQoIJwGQB4OHhBqUDIqBSmD7G
+  sha1: c59752e4f5fc98e6363fd25a920a0329f832d312
 
 resource_pools:
 - name: vms
