--- a/bosh-lite.yml
+++ b/bosh-lite.yml
@@ -3,8 +3,8 @@
   value:
     name: bosh-warden-cpi
     version: 30
-    url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/bosh-warden-cpi-30-ubuntu-trusty-3312.15-20170120-022946-24441193-20170120022949.tgz?versionId=ayT6Bm0VLtWso8yg.tVeKQciAZQpp1za
-    sha1: 18844836f0b59e0955178bce51e15fbb39b4db7f
+    url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/bosh-warden-cpi-31-ubuntu-trusty-3312.15-20170123-212043-909782383-20170123212047.tgz?versionId=RvejvdUvYVDvt.TmsP6aqyf9deMdIxRu
+    sha1: 9568f6555431840075dfe21615f9ae61e6d6bf3a
 
 - type: replace
   path: /releases/-
