--- a/credhub.yml
+++ b/credhub.yml
@@ -85,10 +85,19 @@
 - type: replace
   path: /variables/-
   value:
+    name: credhub_ca
+    type: certificate
+    options:
+      is_ca: true
+      common_name: "CredHub CA"
+
+- type: replace
+  path: /variables/-
+  value:
     name: credhub_tls
     type: certificate
     options:
-      ca: default_ca
+      ca: credhub_ca
       common_name: ((internal_ip))
       alternative_names: [((internal_ip))]
 
