--- a/configurations/generic/project-config.yml
+++ b/configurations/generic/project-config.yml
@@ -16,7 +16,7 @@ routing-cf-uaa-url: # Routing UAA URL In PCF: https://uaa.<system domain>
 bosh_release_url: # URL to latest stable 261 bosh-director release e.g. file:///path/to/bosh-release.tgz
 bosh_release_sha1: # SHA1 of latest stable 261 bosh-director release
 credhub_encryption_key: # 16 byte number in HEX format: i.e. ABCDEF0123456789ABCDEF0123456789
-credhub_release_url: # URL to CredHub release 0.4 https://github.com/pivotal-cf/credhub-release/releases/download/0.4.0/credhub-0.4.0.tgz
+credhub_release_url: # URL to CredHub release 0.4 https://s3.amazonaws.com/kubo-public/credhub-0.4.0.tgz, or link to local file
 director_name: # user friendly Director name
 dns_recursor_ip: # DNS IP address. Usually the same as gateway, see below
 internal_cidr: # CIDR range that BOSH will deploy to
