--- a/configurations/generic/project-config.yml
+++ b/configurations/generic/project-config.yml
@@ -13,7 +13,7 @@ routing-cf-uaa-url: # Routing UAA URL In PCF: https://uaa.<system domain>
 
 # we use BOSH 261 since CredHub 0.4 supports only it
 # CredHub 0.4 fixes important bug that breaks deployment
-bosh_release_url: # URL to latest stable 261 bosh-director release e.g. file:///path/to/bosh-release.tgz
+bosh_release_url: # URL to latest stable 261 bosh-director release https://s3.amazonaws.com/kubo-public/bosh-dev-release.tgz, or link to a local file
 bosh_release_sha1: # SHA1 of latest stable 261 bosh-director release
 credhub_encryption_key: # 16 byte number in HEX format: i.e. ABCDEF0123456789ABCDEF0123456789
 credhub_release_url: # URL to CredHub release 0.4 https://s3.amazonaws.com/kubo-public/credhub-0.4.0.tgz, or link to local file
