JSON key is always present

--- a/gcp/use_service_account.yml
+++ b/gcp/use_service_account.yml
@@ -3,7 +3,7 @@
   value: ((service_account))
 
 - type: remove
-  path: /instance_groups/name=bosh/properties/google/json_key?
+  path: /instance_groups/name=bosh/properties/google/json_key
 
 - type: remove
-  path: /cloud_provider/properties/google/json_key?
+  path: /cloud_provider/properties/google/json_key
