--- a/configurations/generic/project-config.yml
+++ b/configurations/generic/project-config.yml
@@ -17,6 +17,7 @@ bosh_release_url: # URL to latest stable 261 bosh-director release https://s3.am
 bosh_release_sha1: # SHA1 of latest stable 261 bosh-director release
 credhub_encryption_key: # 16 byte number in HEX format: i.e. ABCDEF0123456789ABCDEF0123456789
 credhub_release_url: # URL to CredHub release 0.4 https://s3.amazonaws.com/kubo-public/credhub-0.4.0.tgz, or link to local file
+etcd_release_url: # URL to kubo etcd release https://s3.amazonaws.com/kubo-public/etcd-85%2Bdev.1.tgz, or link to local file
 director_name: # user friendly Director name
 dns_recursor_ip: # DNS IP address. Usually the same as gateway, see below
 internal_cidr: # CIDR range that BOSH will deploy to
