--- a/bosh.yml
+++ b/bosh.yml
@@ -124,6 +124,7 @@ variables:
 - name: default_ca
   type: certificate
   options:
+    is_ca: true
     common_name: ca # todo fix
 - name: director_ssl
   type: certificate
