--- a/config-server.yml
+++ b/config-server.yml
@@ -64,6 +64,7 @@
     name: config_server_root_ca
     type: certificate
     options:
+      is_ca: true
       common_name: config_server_ca
 
 - type: replace
