--- a/turbulence.yml
+++ b/turbulence.yml
@@ -43,6 +43,7 @@
     name: turbulence_api_ca
     type: certificate
     options:
+      is_ca: true
       common_name: turbulence_api_ca
 
 - type: replace
