Let the BOSH download etcd
* we put etcd in public bucket. BOSH director can download manifest on
its own. Users can get public url from manifest. For full offline
support we need to upload docker release as well.

[#138049767]

--- a/manifests/service.yml
+++ b/manifests/service.yml
@@ -2,7 +2,9 @@ name: ((deployment_name))
 
 releases:
 - name: etcd
-  version: latest
+  version: 85+dev.1
+  url: https://s3.amazonaws.com/kubo-public/etcd-85%2Bdev.1.tgz
+  sha1: 3e2aa617afee3ce522effead79c6ab3cf73ec38b
 - name: kubo
   version: latest
 - name: docker
