--- a/configurations/generic/project-config.yml
+++ b/configurations/generic/project-config.yml
@@ -15,8 +15,9 @@ routing-cf-uaa-url: # Routing UAA URL In PCF: https://uaa.<system domain>
 # CredHub 0.4 fixes important bug that breaks deployment
 bosh_release_url: # URL to latest stable 261 bosh-director release https://s3.amazonaws.com/kubo-public/bosh-dev-release.tgz, or link to a local file
 bosh_release_sha1: # SHA1 of latest stable 261 bosh-director release
+
 credhub_encryption_key: # 16 byte number in HEX format: i.e. ABCDEF0123456789ABCDEF0123456789
-credhub_release_url: # URL to CredHub release 0.4 https://s3.amazonaws.com/kubo-public/credhub-0.4.0.tgz, or link to local file
+
 director_name: # user friendly Director name
 dns_recursor_ip: # DNS IP address. Usually the same as gateway, see below
 internal_cidr: # CIDR range that BOSH will deploy to
@@ -25,4 +26,7 @@ internal_gw: # internal gateway
 stemcell_version: # version of the stemcell used in all Kubo deployments
 stemcell_url: # path to a stemcell used in all Kubo deployments
 syslog-endpoint: ""
+
+credhub_release_url: https://s3.amazonaws.com/kubo-public/credhub-0.4.0.tgz
+kubo_release_url: https://s3.amazonaws.com/kubo-public/kubo-release.tgz
 
