--- a/aws/cloud-config.yml
+++ b/aws/cloud-config.yml
@@ -5,6 +5,9 @@ azs:
 - name: z2
   cloud_properties:
     availability_zone: ((az))
+- name: z3
+  cloud_properties:
+    availability_zone: ((az))
 
 vm_types:
 - name: default
@@ -28,7 +31,7 @@ networks:
   subnets:
   - range: ((internal_cidr))
     gateway: ((internal_gw))
-    azs: [z1, z2]
+    azs: [z1, z2, z3]
     dns: [8.8.8.8]
     cloud_properties:
       subnet: ((subnet_id))
