--- a/gcp/cloud-config.yml
+++ b/gcp/cloud-config.yml
@@ -5,6 +5,9 @@ azs:
 - name: z2
   cloud_properties:
     zone: ((zone))
+- name: z3
+  cloud_properties:
+    zone: ((zone))
 
 vm_types:
 - name: default
@@ -30,7 +33,7 @@ networks:
   subnets:
   - range: ((internal_cidr))
     gateway: ((internal_gw))
-    azs: [z1, z2]
+    azs: [z1, z2, z3]
     dns: [8.8.8.8]
     cloud_properties:
       network_name: ((network))
