--- a/virtualbox/cloud-config.yml
+++ b/virtualbox/cloud-config.yml
@@ -1,6 +1,7 @@
 azs:
 - name: z1
 - name: z2
+- name: z3
 
 vm_types:
 - name: default
@@ -26,7 +27,7 @@ networks:
   subnets:
   - range: ((internal_cidr))
     gateway: ((internal_gw))
-    azs: [z1, z2]
+    azs: [z1, z2, z3]
     dns: [8.8.8.8]
     cloud_properties:
       name: ((network_name))
