--- a/vsphere/cloud-config.yml
+++ b/vsphere/cloud-config.yml
@@ -7,6 +7,10 @@ azs:
   cloud_properties:
     datacenters:
     - clusters: [((vcenter_cluster)): {}]
+- name: z3
+  cloud_properties:
+    datacenters:
+    - clusters: [((vcenter_cluster)): {}]
 
 vm_types:
 - name: default
@@ -32,7 +36,7 @@ networks:
   subnets:
   - range: ((internal_cidr))
     gateway: ((internal_gw))
-    azs: [z1, z2]
+    azs: [z1, z2, z3]
     dns: [8.8.8.8]
     cloud_properties:
       name: ((network_name))
