--- a/ci/environments/gcp/director.yml
+++ b/ci/environments/gcp/director.yml
@@ -1,13 +1,15 @@
 project_id: cf-pcf-kubo
-network: # GCP network
-subnetwork: # GCP subnetwork
-tags: # optional array for GCP instance tags
-zone: # name of GCP zone
-service_account: # name of the service account applied to BOSH director vm
-internal_ip: # Internal ip address of the BOSH director
-bosh_hostname: # Resolvable hostname of your BOSH director
+network: main-pcf-network
+subnetwork: kubo-ci
+tags: 
+  - "no-ip"
+  - internal
+zone: us-east1-c
+service_account: bosh-deployer@cf-pcf-kubo.iam.gserviceaccount.com
+internal_ip: 10.0.254.254
+bosh_hostname: 10.0.254.254
 
-deployments_network: # Network name to deploy service in your cloud config
+deployments_network: kubo-network
 
 cf_uaa_url: # URL of your CF UAA. In PCF: https://uaa.<system domain>
 cf_url: # URL of your CF API. In PCF: https://api.<system domain>
@@ -19,18 +21,18 @@ routing-cf-uaa-url: # Routing UAA URL In PCF: https://uaa.<system domain>
 
 # we use BOSH 261 since CredHub 0.4 supports only it
 # CredHub 0.4 fixes important bug that breaks deployment
-bosh_release_url: # URL to latest stable 261 bosh-director release https://s3.amazonaws.com/kubo-public/bosh-dev-release.tgz, or link to a local file
-bosh_release_sha1: # SHA1 of latest stable 261 bosh-director release
+bosh_release_url: https://bosh.io/d/github.com/cloudfoundry/bosh?v=261
+bosh_release_sha1: b7855edc33ece92e9e8e1b5d03c5e2c897d426d8
 
-credhub_encryption_key: # 16 byte number in HEX format: i.e. ABCDEF0123456789ABCDEF0123456789
+credhub_encryption_key: 0BCDEF0123456789ABCDEF0123456789
 
-director_name: # user friendly Director name
-dns_recursor_ip: # DNS IP address. Usually the same as gateway, see below
-internal_cidr: # CIDR range that BOSH will deploy to
-internal_gw: # internal gateway
+director_name: I AM CI
+dns_recursor_ip: 10.0.254.1
+internal_cidr: 10.0.254.0/24
+internal_gw: 10.0.254.1
 
-stemcell_version: # version of the stemcell used in all Kubo deployments
-stemcell_url: # path to a stemcell used in all Kubo deployments
+stemcell_version: 3312.18
+stemcell_url: https://s3.amazonaws.com/bosh-gce-light-stemcells/light-bosh-stemcell-3312.18-google-kvm-ubuntu-trusty-go_agent.tgz
 syslog-endpoint: ""
 
 credhub_release_url: https://s3.amazonaws.com/kubo-public/credhub-0.4.0.tgz
