Add placeholder empty reserved IP range for virtualbox cloud-config
* This can then be replaced via an ops-file

[#139969967](https://www.pivotaltracker.com/story/show/139969967)

Signed-off-by: Jian Qiu Wang <wangjq@cn.ibm.com>

--- a/virtualbox/cloud-config.yml
+++ b/virtualbox/cloud-config.yml
@@ -29,6 +29,7 @@ networks:
     gateway: ((internal_gw))
     azs: [z1, z2, z3]
     dns: [8.8.8.8]
+    reserved: []
     cloud_properties:
       name: ((network_name))
 
