Add placeholder reserved ip array for remaining IAASes
[#139969967](https://www.pivotaltracker.com/story/show/139969967)

Signed-off-by: Rob Day-Reynolds <rdayreynolds@pivotal.io>

--- a/openstack/cloud-config.yml
+++ b/openstack/cloud-config.yml
@@ -31,6 +31,7 @@ networks:
     gateway: ((internal_gw))
     azs: [z1, z2, z3]
     dns: [8.8.8.8]
+    reserved: []
     cloud_properties:
       net_id: ((net_id))
 - name: vip
