--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -12,28 +12,4 @@ jobs:
   plan:
   - get: git-kubo-deployment
   - task: gcp
-    config:
-      platform: linux
-      image_resource:
-        type: docker-image
-        source:
-          repository: pcfkubo/kubo-ci
-          tag: stable
-      params:
-        GCP_SERVICE_ACCOUNT: {{gcp-service-account}}
-      run:
-        path: sh
-        args:
-        - -ec
-        - |
-          echo $GCP_SERVICE_ACCOUNT > key.json
-          gcloud auth active-service-account bosh-deployer bosh-deployer@cf-pcf-kubo.iam.gserviceaccount.com --key-file=key.json
-          git-kubo-deployment/bin/deploy_bosh git-kubo-deployment/ci/environments/gcp
-          cp git-kubo-deployment/ci/environments/gcp/creds.yml bosh-creds/
-          cp git-kubo-deployment/ci/environments/gcp/*.json bosh-state/
-
-      inputs:
-      - name: git-kubo-deployment
-      outputs:
-      - name: bosh-state
-      - name: bosh-creds
+    file: git-kubo-deployment/ci/tasks/install-bosh.yml
