--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -7,11 +7,39 @@ resources:
     branch: pr-e2e-ci
     private_key: {{git-ssh-key}}
 
+- name: s3-bosh-state
+  type: s3
+  source:
+    access_key_id: {{aws-access-key-id}}
+    secret_access_key: {{aws-secret-access-key}}
+    bucket: kubo-pipelines
+    endpoint: s3-eu-west-1.amazonaws.com
+    region_name: eu-west-1
+    versioned_file: bosh/state.json
+
+- name: s3-bosh-creds
+  type: s3
+  source:
+    access_key_id: {{aws-access-key-id}}
+    secret_access_key: {{aws-secret-access-key}}
+    bucket: kubo-pipelines
+    endpoint: s3-eu-west-1.amazonaws.com
+    region_name: eu-west-1
+    versioned_file: bosh/creds.yaml
+
 jobs:
 - name: install-bosh
   plan:
   - get: git-kubo-deployment
+    trigger: true
   - task: install
     file: git-kubo-deployment/ci/tasks/install-bosh.yml
     params:
       GCP_SERVICE_ACCOUNT: {{gcp-service-account}}
+  - aggregate:
+    - put: s3-bosh-creds
+      params:
+        file: bosh-creds/creds.yaml
+    - put: s3-bosh-state
+      params:
+        file: bosh-state/state.json
