Split install BOSH and destroy BOSH into two jobs
We think this improves the visibility of what's going on in the pipeline

[#140249735]

Signed-off-by: Oleksandr Slynko <oslynko@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -39,7 +39,22 @@ jobs:
   - aggregate:
     - put: s3-bosh-creds
       params:
-        file: bosh-creds/creds.yaml
+        file: bosh-creds/creds.yml
     - put: s3-bosh-state
       params:
         file: bosh-state/state.json
+
+- name: destroy-bosh
+  plan:
+  - aggregate:
+    - get: git-kubo-deployment
+      passed: [ 'install-bosh' ]
+      trigger: true
+    - get: s3-bosh-creds
+      passed: [ 'install-bosh' ]
+    - get: s3-bosh-state
+      passed: [ 'install-bosh' ]
+  - task: destroy
+    file: git-kubo-deployment/ci/tasks/destroy-bosh.yml
+    params:
+      GCP_SERVICE_ACCOUNT: {{gcp-service-account}}
