--- a/configurations/generic/project-config.yml
+++ b/configurations/generic/project-config.yml
@@ -1,11 +1,7 @@
-internal_ip: # Internal ip address of the BOSH director
-bosh_hostname: # Resolvable hostname of your BOSH director
+internal_ip: # Internal ip address of the BOSH director. Please select an available ip address in the network you wish to deploy into. 
 
 deployments_network: # Network name to deploy service in your cloud config
 
-cf_uaa_url: # URL of your CF UAA. In PCF: https://uaa.<system domain>
-cf_url: # URL of your CF API. In PCF: https://api.<system domain>
-cf_username: # Your CF username. It is used by ODB.
 cf-tcp-router-name: # URL to TCP router. In PCF: tcp.<domain>
 routing-cf-api-url: # TCP routing API URL. In PCF: https://api.<system domain>
 routing-cf-client-id: # Routing UAA client name that will be used to register tcp routes
@@ -13,8 +9,8 @@ routing-cf-uaa-url: # Routing UAA URL In PCF: https://uaa.<system domain>
 
 # we use BOSH 261 since CredHub 0.4 supports only it
 # CredHub 0.4 fixes important bug that breaks deployment
-bosh_release_url: # URL to latest stable 261 bosh-director release https://s3.amazonaws.com/kubo-public/bosh-dev-release.tgz, or link to a local file
-bosh_release_sha1: # SHA1 of latest stable 261 bosh-director release
+bosh_release_url: http://bosh.io/d/github.com/cloudfoundry/bosh?v=261.2 # URL to  261 bosh-director release https://s3.amazonaws.com/kubo-public/bosh-dev-release.tgz, or link to a local file
+bosh_release_sha1: d4635b4b82b0dc5fd083b83eb7e7405832f6654b # SHA1 of latest stable 261 bosh-director release
 
 credhub_encryption_key: # 16 byte number in HEX format: i.e. ABCDEF0123456789ABCDEF0123456789
 
