Run pipeline from master
[#140249735]

Signed-off-by: Oleksandr Slynko <oslynko@pivotal.io>
Signed-off-by: Jamie Monserrate <jmonserrate@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -4,7 +4,7 @@ resources:
   type: git
   source:
     uri: git@github.com:pivotal-cf-experimental/kubo-deployment
-    branch: pr-e2e-ci
+    branch: master
     private_key: {{git-ssh-key}}
 
 - name: s3-bosh-state
