Run only one job
[#139835387]

Signed-off-by: Oleksandr Slynko <oslynko@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -29,6 +29,7 @@ resources:
 
 jobs:
 - name: install-bosh
+  serial_groups: [ deploy-bosh ]
   plan:
   - get: git-kubo-deployment
     trigger: true
@@ -45,6 +46,7 @@ jobs:
         file: bosh-state/state.json
 
 - name: destroy-bosh
+  serial_groups: [ deploy-bosh ]
   plan:
   - aggregate:
     - get: git-kubo-deployment
