--- a/ci/tasks/deploy-k8s-instance.yml
+++ b/ci/tasks/deploy-k8s-instance.yml
@@ -4,6 +4,8 @@ image_resource:
   source:
     repository: pcfkubo/kubo-ci
     tag: stable
+params:
+  ROUTING_CF_CLIENT_SECRET:
 run:
   path: git-kubo-deployment/ci/scripts/deploy-k8s-instance.sh
 
