--- a/configurations/generic/project-config.yml
+++ b/configurations/generic/project-config.yml
@@ -14,12 +14,13 @@ bosh_release_sha1: d4635b4b82b0dc5fd083b83eb7e7405832f6654b # SHA1 of latest sta
 
 credhub_encryption_key: # 16 byte number in HEX format: i.e. ABCDEF0123456789ABCDEF0123456789
 
-director_name: # user friendly Director name
-dns_recursor_ip: # DNS IP address. Usually the same as gateway, see below
 internal_cidr: # CIDR range that BOSH will deploy to
 internal_gw: # internal gateway
 
-stemcell_version: # version of the stemcell used in all Kubo deployments
+director_name: # user friendly Director name
+dns_recursor_ip: # DNS IP address. Same as internal gateway in GCP & AWS.
+
+stemcell_version: # version of the stemcell used in all Kubo deployments. Quote the version to satisfy YAML parsers
 stemcell_url: # path to a stemcell used in all Kubo deployments
 syslog-endpoint: ""
 
