--- a/configurations/generic/project-config.yml
+++ b/configurations/generic/project-config.yml
@@ -2,7 +2,7 @@ internal_ip: # Internal ip address of the BOSH director. Please select an availa
 
 deployments_network: # Network name to deploy service in your cloud config
 
-cf-tcp-router-name: # URL to TCP router. In PCF: tcp.<domain>
+cf-tcp-router-name: # Hostname of TCP router. Use `cf domains` to find existing TCP domain. If none exists, see https://docs.cloudfoundry.org/devguide/deploy-apps/routes-domains.html#shared-domains for instructions to create one.
 routing-cf-api-url: # TCP routing API URL. In PCF: https://api.<system domain>
 routing-cf-client-id: # Routing UAA client name that will be used to register tcp routes
 routing-cf-uaa-url: # Routing UAA URL In PCF: https://uaa.<system domain>
@@ -16,11 +16,12 @@ credhub_encryption_key: # 16 byte number in HEX format: i.e. ABCDEF0123456789ABC
 
 internal_cidr: # CIDR range that BOSH will deploy to
 internal_gw: # internal gateway
+external-kubo-port: # Port to use for Kubernetes API
 
 director_name: # user friendly Director name
-dns_recursor_ip: # DNS IP address. Same as internal gateway in GCP & AWS.
+dns_recursor_ip: # DNS IP address
 
-stemcell_version: # version of the stemcell used in all Kubo deployments. Quote the version to satisfy YAML parsers
+stemcell_version: "" # version of the stemcell used in all Kubo deployments. Quote the version to satisfy YAML parsers
 stemcell_url: # path to a stemcell used in all Kubo deployments
 syslog-endpoint: ""
 
